carry over the transcriptions and original compositions

--- a/src/_includes/home.pug
+++ b/src/_includes/home.pug
@@ -17,7 +17,7 @@ block content
       br
       h2
         a(href="/compositions" class="content-list-heading-wrapper")
-          span.content-list-heading Original Compositions
+          span.content-list-heading Compositions
           span.content-list-hidden &nbsp;\#[more]
       .posts
         ul
