--- a/src/_includes/base.pug
+++ b/src/_includes/base.pug
@@ -4,13 +4,16 @@ html
   title Kyle Silver
   head
     link(rel="stylesheet" href="/css/site.css")
-    link(rel="preconnect" href="https://fonts.gstatic.com")
-    link(href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet")
-    link(href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet")
-    link(href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100;0,300;0,800;1,300;1,800&display=swap" rel="stylesheet")
+    link(rel="preconnect" href="https://fonts.googleapis.com")
+    link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
+    link(rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,200;0,700;1,700;1,600&display=swap")
+    link(rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ruda:wght@400;900&display=swap")
+    link(rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,300;0,600;1,300;1,600&display=swap")
+    link(rel="stylesheet" href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100;0,300;0,800;1,300;1,800&display=swap" )
+
     meta(name="viewport" content="width=device-width, initial-scale=1")
   body
     block content
     #footer
       p.flourish &lt;/&gt;
-      p.copyright Kyle Silver c. 2022
+      p.copyright Kyle Silver c. 2023
