--- a/src/css/site.css
+++ b/src/css/site.css
@@ -18,15 +18,19 @@
 }
 
 body {
-    font-family: "Lato", sans-serif;
-    font-weight: 300;
+    font-family: "IBM Plex", serif;
+    font-weight: 200;
     color: var(--black);
-    line-height: 1.5;
+    line-height: 1.4;
     -webkit-hyphens: auto;
     -moz-hyphens: auto;
     -ms-hyphens: auto;
     hyphens: auto;
-    font-size: 1.15rem;
+    font-size: 1.4rem;
+}
+
+body b {
+    font-weight: 700;
 }
 
 h1,
@@ -34,12 +38,14 @@ h2,
 h3,
 h4,
 h5 {
-    font-family: "Playfair Display", serif;
+    font-family: "Ruda", sans-serif;
 }
 
 /* header styles */
 
 .nav-items {
+    font-family: "Ruda", sans-serif;
+    font-size: 1.15rem;
     display: flex;
     list-style: none;
     padding: 0;
@@ -49,6 +55,9 @@ h5 {
 @media only screen and (max-width: 45rem) {
     .nav-items {
         display: block;
+    }
+    body {
+        font-size: 1.3rem;
     }
 }
 
@@ -69,8 +78,10 @@ h5 {
 
 #footer {
     text-align: center;
+    font-family: "Ruda", monospace;
+    font-weight: 100;
     color: var(--ayu-gray);
-    font-size: 0.8rem;
+    font-size: 1rem;
 }
 
 #footer .flourish {
@@ -112,6 +123,7 @@ h1 {
 
 .tile p {
     margin-top: 0;
+    margin-bottom: 0;
     color: var(--black);
 }
 
@@ -125,7 +137,8 @@ h1 {
 }
 
 .tile .tile-date {
-    font-size: 1rem;
+    font-size: 1.2rem;
+    font-family: "IBM Plex Serif", serif;
     font-weight: 300;
     color: var(--ayu-gray);
 }
@@ -146,6 +159,11 @@ a.teaser-link:hover {
     color: var(--black);
 }
 
+.teaser-link b {
+    font-family: Ruda, sans-serif;
+    font-size: smaller;
+}
+
 span.published {
     color: var(--gray);
     float: right;
@@ -158,10 +176,9 @@ span.published {
 
 .content-list-heading:hover + .content-list-hidden {
     display: inline;
-    color: var(--ayu-gray);
+    color: var(--ayu-fg);
     font-size: smaller;
     font-weight: 100;
-    font-family: "JetBrains Mono";
 }
 
 .content-list-heading-wrapper {
@@ -187,7 +204,7 @@ span.published {
 }
 
 #article ol.footnote {
-    font-size: 0.8rem;
+    font-size: 1rem;
 }
 
 #article sup {
@@ -211,7 +228,7 @@ a.tile-link:hover {
 /* inline code styles */
 
 .code {
-    font-family: "Jetbrains Mono", monospace;
+    font-family: "IBM Plex Mono", monospace;
     font-size: 0.9rem;
     border-top: 1px solid var(--black);
     border-bottom: 1px solid var(--black);
@@ -222,9 +239,12 @@ a.tile-link:hover {
 }
 
 code {
-    font-family: "Jetbrains Mono", monospace;
-    font-size: 0.9rem;
-    font-weight: 100;
+    font-family: "IBM Plex Mono", monospace;
+    /* font-weight: 600; */
+    font-size: 1rem;
+    /* font-size: 0.9rem; */
+    border-radius: 4px;
+    /* font-weight: 100; */
     background-color: var(--code-bg);
     padding-left: 2.5px;
     padding-right: 2.5px;
