--- a/src/css/site.css
+++ b/src/css/site.css
@@ -18,7 +18,7 @@
 }
 
 body {
-    font-family: "IBM Plex", serif;
+    font-family: "IBM Plex Serif", serif;
     font-weight: 200;
     color: var(--black);
     line-height: 1.4;
