--- a/src/_includes/base.pug
+++ b/src/_includes/base.pug
@@ -9,7 +9,8 @@ html(lang="en-us")
     link(rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,200;0,400;0,700;1,200;1,400;1,700&display=swap")
     link(rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ruda:wght@400;900&display=swap")
     link(rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,300;0,700;1,300;1,700&display=swap")
-    link(rel="stylesheet" href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100;0,300;0,800;1,300;1,800&display=swap" )
+    link(rel="stylesheet" href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100;0,300;0,800;1,300;1,800&display=swap")
+    link(rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,700;1,300;1,700&display=swap")
 
     meta(name="viewport" content="width=device-width, initial-scale=1")
   body
